--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.5.2" />
+      <PackageReference Include="ValueOf" Version="2.0.31" />
+    </ItemGroup>
+
 </Project>
