--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
       <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
 </Project>
