--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="11.5.2" />
+      <PackageReference Include="MediatR" Version="12.0.1" />
       <PackageReference Include="ValueOf" Version="2.0.31" />
     </ItemGroup>
 
