feat: domain baseline with features: - add generic mapping configurations - add an api policy concerning uri format - add a result class to standardize success/failure scenarios - setup db operation flow using both dapper and ef core - add ExceptionMiddleware to handle exceptions globally - add extensions to reduce boilerplate - add a README documenting how to work with repository and use it - Add sample repository and command/handler

--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -12,4 +12,9 @@
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
