--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
