--- a/src/Api/Properties/launchSettings.json
+++ b/src/Api/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "Api": {
+    "Development": {
       "commandName": "Project",
       "applicationUrl": "http://localhost:42069",
       "environmentVariables": {
