fix: UserDto do not contain entity  - CreateUserCommand does not contain entity  - Department and User configuration for Id changed  - convention fix  - Added DepartmentRepository

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -20,6 +20,8 @@
 
     <ItemGroup>
       <Folder Include="Common\Interfaces\Repositories" />
+      <Folder Include="Helpers\" />
+      <Folder Include="Users\Queries\" />
     </ItemGroup>
 
 </Project>
