feat: create room interface and business logic

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
       <Folder Include="Common\Interfaces\Repositories" />
       <Folder Include="Helpers\" />
+      <Folder Include="Rooms\Queries\" />
       <Folder Include="Users\Queries\" />
     </ItemGroup>
 
