refactor: fixing and identifying some potential bugs - add development environment connection string - reducing some dependencies - renaming and restructuring

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "DatabaseSettings": {
+    "DbProvider": "PostgreSQL",
+    "ConnectionString": "Server=localhost;Port=5432;Database=mydb;User ID=profiletest;Password=supasecured;"
+  },
   "Serilog" : {
     "MinimumLevel" : {
       "Default": "Debug",
