--- a/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
+++ b/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.16" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.1.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,6 +21,19 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Api\Api.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Bogus">
+        <HintPath>..\..\..\.nuget\packages\bogus\34.0.2\lib\net6.0\Bogus.dll</HintPath>
+      </Reference>
+      <Reference Include="FluentAssertions">
+        <HintPath>..\..\..\.nuget\packages\fluentassertions\6.11.0\lib\net6.0\FluentAssertions.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
