--- a/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
+++ b/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
@@ -9,6 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="34.0.2" />
+        <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.16" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="3.1.0" />
