--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: profileorg/${{ github.repository }}
+        tags: profileorg/profile-be
