--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
+
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
 
