--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Run integration test with docker compose file
-      run: docker compose -f docker-compose.test.yml up
+    - name: start containers
+      run: docker compose -f docker-compose.test.yml up --detach
+
+    - name: Run integration test
+      run: docker compose run --rm backend
+
+    - name: stop and remove containers
+      run: docker compose down
