fix(dev-ci.yml): syntax error

--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -33,7 +33,7 @@ jobs:
       run: docker compose down
   
   build:
-    if: github.event_name == "push" 
+    if: github.event_name == 'push'
     needs: [unit-test, integration-test]
     runs-on: ubuntu-latest
     steps:
