--- a/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
+++ b/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.16" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+        <PackageReference Include="NSubstitute" Version="5.0.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="3.1.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
