--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -9,6 +9,7 @@
     "TokenLifetime": "00:20:00",
     "RefreshTokenLifetimeInDays": 3
   },
+  "Seed": true,
   "Serilog" : {
     "MinimumLevel" : {
       "Default": "Debug",
