add: email handling with mailtrap

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -9,6 +9,13 @@
     "TokenLifetime": "00:20:00",
     "RefreshTokenLifetimeInDays": 3
   },
+  "MailSettings": {
+    "ClientUrl": "https://send.api.mailtrap.io/api/send",
+    "Token": "745f040659edff0ce87b545567da72d2",
+    "SenderName": "ProFile",
+    "SenderEmail": "profile@ezarp.dev",
+    "TemplateUuid": "9d6a8f25-65e9-4819-be7d-106ce077acf1"
+  },
   "Seed": true,
   "Serilog" : {
     "MinimumLevel" : {
