--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime" Version="7.0.4" />
       <PackageReference Include="RestSharp" Version="110.2.0" />
       <PackageReference Include="Serilog" Version="2.12.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.0" />
     </ItemGroup>
 
     <ItemGroup>
