add: logging base

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -28,8 +28,48 @@
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
         "Microsoft.AspNetCore.Authentication": "Debug",
-        "System": "Warning"
+        "System": "Warning",
+        "Infrastructure.Identity.Authentication": "Warning"
       }
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "PostgreSQL",
+        "Args": {
+          "connectionString": "Server=localhost;Port=5432;Database=mydb;User ID=profiletest;Password=supasecured",
+          "tableName": "Logs",
+          "schemaName": null,
+          "needAutoCreateTable": true,
+          "loggerColumnOptions": {
+            "Id": "IdAutoIncrement",
+            "Template": "Message",
+            "Time": "Timestamp",
+            "Event": "LogEvent",
+            "Level": "LevelAsText",
+            "Message": "RenderedMessage"
+          },
+          "loggerPropertyColumnOptions": {
+            "ObjectType": {
+              "Name": "ObjectType",
+              "Format": "{0}",
+              "WriteMethod": "Raw",
+              "DbType": "Text"
+            },
+            "ObjectId": {
+              "Name": "ObjectId",
+              "Format": "{0}",
+              "WriteMethod": "Raw",
+              "DbType": "Uuid"
+            },
+            "UserId": {
+              "Name": "UserId",
+              "Format": "{0}",
+              "WriteMethod": "Raw",
+              "DbType": "Uuid"
+            }
+          }
+        }
+      }
+    ]
   }
 }
