--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -14,6 +14,8 @@
       </PackageReference>
       <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
       <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+      <PackageReference Include="Serilog.Expressions" Version="3.4.1" />
+      <PackageReference Include="Serilog.Sinks.PostgreSQL.Alternative" Version="3.5.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
