--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -24,4 +24,8 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\Payload\Requests\DigitalFile" />
+    </ItemGroup>
+
 </Project>
