--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -36,7 +36,7 @@
       {
         "Name": "PostgreSQL",
         "Args": {
-          "connectionString": "Server=localhost;Port=5432;Database=mydb;User ID=profiletest;Password=supasecured",
+          "connectionString": "Server=database;Port=5432;Database=mydb;User ID=profiletest;Password=supasecured",
           "tableName": "Logs",
           "schemaName": null,
           "needAutoCreateTable": true,
