--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -18,7 +18,11 @@
     "Token": "745f040659edff0ce87b545567da72d2",
     "SenderName": "ProFile",
     "SenderEmail": "profile@ezarp.dev",
-    "TemplateUuid": "9d6a8f25-65e9-4819-be7d-106ce077acf1"
+    "TemplateUuids": {
+      "ResetPassword": "9d6a8f25-65e9-4819-be7d-106ce077acf1",
+      "ShareEntry": "ad69df89-885a-48fb-b8f6-6d06af1a54e3",
+      "Request": "bce7e60c-d848-4f80-af96-cccd264dcc32"
+    }
   },
   "Seed": true,
   "Serilog" : {
